--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,4 +94,5 @@
     <script>
         document.querySelector('html').classList.remove('no-js');
     </script>
+    <script data-ad-client="ca-pub-9409957796535179" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
