Fixed footer and hero header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
     {% include links.html %}
 
     <p>
-      <span>Jayflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Greentree Consulting</a>
+      <span>Jayflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://jaygreentree.com" target="_blank" class="creator">Greentree Consulting</a>
     </p>
 </footer>
 
